@@ -1,3 +1,7 @@
+2004-07-24  Roman Kennke  <roman@ontographics.com>
+
+	* javax/swing/BoxLayout.java: Reimplement.
+
 2004-07-23  Thomas Fitzsimmons  <fitzsim@redhat.com>
 
 	* gnu/java/awt/peer/gtk/GdkGraphics.java,
